# goose-installer

./: Cargo.toml  apps-info.toml
apps-info/: Cargo.toml
apps-info/src/: fetch_apps.rs  lib.rs  local_apps_info.rs
installer/: Cargo.toml
installer/src/: main.rs
src/: main.rs  setup_installer.rs  update_apps.rs
windows-taskscheduler-api-rust/src/task/: mod.rs  task_trigger.rs
