[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
apps-info = { path = "../apps-info" }

[dependencies.windows]
version = "0.37"
features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_UI_Shell",
]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.20"
features = ["blocking"]
default-features = false
